# Sound-tts

./: .gitignore  Cargo.toml  README.md
examples/: test.rs
examples/c++/: sound_tts.cpp  sound_tts.h
src/: ffi.rs  lib.rs
src/mark/: linux.rs  mod.rs  windows.rs
